# universal-testing-agent

./: .env.example  .gitignore  README.md  pyproject.toml
adapters/: api_adapter.py  base.py  data_pipeline_adapter.py  llm_app_adapter.py  mobile_adapter.py  model_adapter.py  rag_app_adapter.py  sample_custom_product_adapter.py  web_adapter.py  workflow_adapter.py
cli/: main.py
configs/: default.yaml
orchestrator/: asset_generator.py  capabilities.py  classifier.py  compare.py  compatibility.py  config.py  contracts.py  coverage_catalog.py  dataset_loader.py  executor.py  history.py  history_analyzer.py  intake.py  models.py  observability.py  planner.py  platform_summary.py  plugin_loader.py  plugin_onboarding.py  plugin_packaging.py  plugins.py  policy.py  project_registry.py  project_service.py  quality_gates.py  registry.py  reporter.py  router.py  run_registry.py  taxonomy.py  trends.py
prompts/: strategy_prompt.txt
runners/: data_pipeline_runner.py  llm_app_runner.py  mobile_runner.py  model_runner.py  playwright_runner.py  pytest_runner.py  rag_app_runner.py  sample_custom_product_runner.py  workflow_runner.py
schemas/: compare_schema.yaml  contract_validation_schema.yaml  coverage_catalog_schema.yaml  history_schema.yaml  intake_schema.yaml  manifest_v2.yaml  plugin_onboarding_schema.yaml  plugin_schema.yaml  project_schema.yaml  project_summary_schema.yaml  quality_gates_schema.yaml  result_schema.yaml  run_registry_schema.yaml  trend_schema.yaml
templates/: report_template.json  result_template.json
tests/: test_asset_generator.py  test_cli.py  (+29 more)
(+21 files in other folders)
