[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-testing-agent"
version = "1.2.0"
description = "AI-driven testing orchestrator for web, API, and model products"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "playwright>=1.42",
  "pytest>=8.0",
  "requests>=2.31",
]

[project.scripts]
uta = "cli.main:main"

[tool.setuptools]
packages = ["cli", "orchestrator", "adapters", "runners"]
